--- a/views/index.jade
+++ b/views/index.jade
@@ -1,58 +1,69 @@
-head
-    title Online Book Store
-    // Bootstrap Core CSS
-    link(rel='stylesheet', href='/stylesheets/bootstrap.min.css')
-    // Custom CSS
-    style.
-      body {
-      padding-top: 70px;
-      /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
-      }
-
-  body
-    // Navigation
-    nav.navbar.navbar-inverse.navbar-fixed-top(role='navigation')
-      .container
-        // Brand and toggle get grouped for better mobile display
-        .navbar-header
-          button.navbar-toggle(type='button', data-toggle='collapse', data-target='#bs-example-navbar-collapse-1')
-            span.sr-only Toggle navigation
-            |                     
-            span.icon-bar
-            |                     
-            span.icon-bar
-            |                     
-            span.icon-bar
-          |                 
-          a.navbar-brand(href='#') Home
-        // Collect the nav links, forms, and other content for toggling
-        #bs-example-navbar-collapse-1.collapse.navbar-collapse
-          ul.nav.navbar-nav
-            li
-              a(href='#') Inventory
-            |                     
-            li
-              a(href='#') Cart
-            |                     
-            li
-              a(href='#') Contact Us
-        // /.navbar-collapse
-      // /.container
-    // Page Content
-    .container
-      .row
-        .col-lg-12.text-center
-          h1 Online Bookstore - Coming Soon!
-          |                 
-          p.lead Signup below to be notified when we open later this year
-          |                 
-          ul.list-unstyled
-            li
-              p(style="color:red") #{err}
-              form(class="form" action="/submit" method="post")
-                label Email: 
-                input(type="text" name="email" placeholder="Email")
-                input(class="btn btn-default" type="submit" value="Submit")
-        br
-        br
-        p Bootstrap Template from: https://github.com/BlackrockDigital/startbootstrap-bare/blob/master/index.html
+extends layout
+// Page Content
+block content
+  div.container
+    div.row
+      div.col-lg-12.text-center
+        h1 Online Bookstore - Grand Opening!
+        
+      h5 Recently Added
+      div.carousel
+        div 1
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        div 2
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        div 3
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        div 4
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        div 5
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        div 6
+          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+      
+      hr
+      br
+      h5 Popular This Week
+        div.carousel
+          div 1
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 2
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 3
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 4
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 5
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 6
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        
+      hr
+      br
+      h5 History     
+        div.carousel
+          div 1
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 2
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 3
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 4
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 5
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+          div 6
+            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
+        
+        
+      br
+      br
+      script. 
+        $(document).ready( function () {
+          $(".carousel").slick({
+            infinite: true,
+            slidesToShow: 4,
+            dots: true,
+            slidesToScroll: 3
+          });
+        });
