added option to show or hide an item | NOTE: can only remove items if logged in

--- a/views/addItem.jade
+++ b/views/addItem.jade
@@ -56,4 +56,8 @@ block content
         input(type='number', step='1', name='numberInStock', placeholder='numberInStock' value="3")
         br 
         br
+        p show item?  
+          input(type='checkbox', name='show' checked)
+        br 
+        br
         input(type='submit', value='Submit')
