user is saved to db | added account view to user | can update user on account view | only logged in user can view account | added email field to User model

--- a/views/catalog.jade
+++ b/views/catalog.jade
@@ -8,7 +8,10 @@ block content
 
     if (success)
       p(style="color: green")=success
-              
+    
+    if (error)
+      p(style="color: red")=error
+    
     a(href="/addItem" class="btn btn-success btn-sm") Add Item
     
     table(class="table table-striped table-hover")
