--- a/views/layout.jade
+++ b/views/layout.jade
@@ -42,7 +42,10 @@ html
           ul.nav.navbar-nav.navbar-right")
             if displayName
               li
+                a(href='/myAccount') My Account
+              li
                 a(href='/cart') Cart
+                
               li
                 a(href="/logout") Logout
             else
