--- a/views/addItem.jade
+++ b/views/addItem.jade
@@ -37,11 +37,11 @@ block content
         br 
         br
         p cost
-        input(type='number', step='0.01', name='cost', placeholder='cost' value="10.50")
+        input(type='number', step='0.01', min='0', name='cost', placeholder='cost' value="10.50")
         br 
         br
         p price
-        input(type='number', step='0.01', name='price', placeholder='price' value="0.50")
+        input(type='number', step='0.01', min='0', name='price', placeholder='price' value="0.50")
         br 
         br
         p image
@@ -53,7 +53,7 @@ block content
         br 
         br
         p numberInStock
-        input(type='number', step='1', name='numberInStock', placeholder='numberInStock' value="3")
+        input(type='number', step='1', min='0', name='numberInStock', placeholder='numberInStock' value="3")
         br 
         br
         p show item?  
