--- a/views/cart.jade
+++ b/views/cart.jade
@@ -5,3 +5,38 @@ block content
     div.row
       div.col-lg-12.text-center
         h1=title
+        
+    if (success)
+      p(style="color: green")=success
+    
+    if (error)
+      p(style="color: red")=error
+    
+    table(class="table table-striped table-hover")
+      tr
+        if isAdmin
+          th
+        th isbn
+        th name
+        th author
+        th genre
+        th price
+        th library
+      each item in cart
+        tr
+          td
+            button(class="btn btn-primary removeButton" id="#{item.id}") delete
+          td(class="showDetails" id="#{item.id}") #{item.isbn}
+          td(class="showDetails" id="#{item.id}") #{item.name}
+          td(class="showDetails" id="#{item.id}") #{item.author}
+          td(class="showDetails" id="#{item.id}") #{item.genre}
+          td(class="showDetails" id="#{item.id}") #{item.price}
+          td(class="showDetails" id="#{item.id}") #{item.library}
+          
+          //- input(type="text" name="qtyText" value="#{item.id}")
+          //- td
+          //-   a(href="product/#{item.id}" class="btn btn-default dealButton") go
+    br
+    br
+    
+    a(href="/" class="btn btn-default btn-block") Back
