--- a/views/catalog.jade
+++ b/views/catalog.jade
@@ -16,7 +16,8 @@ block content
     
     table(class="table table-striped table-hover")
       tr
-        th 
+        if isAdmin
+          th
         th isbn
         th name
         th author
@@ -25,8 +26,9 @@ block content
         th library
       each item in items
         tr
-          td
-            button(class="btn btn-primary removeButton" id="#{item.id}") delete
+          if isAdmin
+            td
+              button(class="btn btn-primary removeButton" id="#{item.id}") delete
           td(class="showDetails" id="#{item.id}") #{item.isbn}
           td(class="showDetails" id="#{item.id}") #{item.name}
           td(class="showDetails" id="#{item.id}") #{item.author}
@@ -55,5 +57,4 @@ block content
             location.reload();
           });
         });
-        
       });
