--- a/views/item.jade
+++ b/views/item.jade
@@ -13,7 +13,7 @@ block content
       img(src="#{item.image}" width="300px" height="500px")
       //- button add to cart
       div
-      p(class="price") $#{item.price}
+      p(class="price" id="#{item.price}") $#{item.price}
       p QTY 
       input(class="qty" type="number" id="#{item.price}" step="1" min="1" value="1")
       button(class="btn btn-primary addToCart" id="#{item.id}") Add to Cart
@@ -63,8 +63,8 @@ block content
         $(".addToCart").click(function (e) {
           console.log("adding to cart: " + e.target.id);
           var itemID = e.target.id;
-          var price = .3;
-          var qty = 2;
+          var price = $(".price").attr("id");
+          var qty = $(".qty").val();
           $.post( "/addToCart", { itemID: itemID, price: price, qty: qty})
             .done(function( data ) {
               console.log( "Data Loaded: " + data );
