fixed cart user_id | cart items are now passed to cart view

--- a/views/cart.jade
+++ b/views/cart.jade
@@ -22,7 +22,7 @@ block content
         th genre
         th price
         th library
-      each item in cart
+      each item in items
         tr
           td
             button(class="btn btn-primary removeButton" id="#{item.id}") delete
