--- a/views/catalog.jade
+++ b/views/catalog.jade
@@ -12,7 +12,9 @@ block content
     if (error)
       p(style="color: red")=error
     
-    a(href="/addItem" class="btn btn-success btn-sm") Add Item
+    if isAdmin
+      a(href="/addItem" class="btn btn-success btn-sm") Add Item
+    
     
     table(class="table table-striped table-hover")
       tr
@@ -22,23 +24,31 @@ block content
         th name
         th author
         th genre
+        if isAdmin
+          th cost
         th price
         th library
+        if isAdmin
+          th show
+          th numberInStock
+        
       each item in items
         tr
           if isAdmin
             td
-              button(class="btn btn-primary removeButton" id="#{item.id}") delete
+              button(class="btn btn-danger removeButton" id="#{item.id}") delete
           td(class="showDetails" id="#{item.id}") #{item.isbn}
           td(class="showDetails" id="#{item.id}") #{item.name}
           td(class="showDetails" id="#{item.id}") #{item.author}
           td(class="showDetails" id="#{item.id}") #{item.genre}
+          if isAdmin
+            td(class="showDetails" id="#{item.id}") #{item.cost}
           td(class="showDetails" id="#{item.id}") #{item.price}
           td(class="showDetails" id="#{item.id}") #{item.library}
-          
-            //- input(type="text" name="qtyText" value="#{item.id}")
-          //- td
-          //-   a(href="product/#{item.id}" class="btn btn-default dealButton") go
+          if isAdmin
+            td(class="showDetails" id="#{item.id}") #{item.show}
+            td(class="showDetails" id="#{item.id}") #{item.numberInStock}
+
     br
     a(href="/" class="btn btn-default btn-block") Back
     
