custom merge of heroku to openshift

--- a/views/catalog.jade
+++ b/views/catalog.jade
@@ -23,7 +23,7 @@ block content
             input(type='checkbox', name='showHidden')
         br
         br
-        input(type='submit', value='Submit')
+        input(type='submit', value='Filter')
       
     table(class="table table-striped table-hover")
       tr
