added guest cart | guests can view cart even if it is empty

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -45,9 +45,9 @@ html
             if displayName
               li
                 a(href='/myAccount') My Account
-              li
-                a(href='/cart') Cart
-                
+            li
+              a(href='/cart') Cart
+            if displayName
               li
                 a(href="/logout") Logout
             else
