--- a/views/catalog.jade
+++ b/views/catalog.jade
@@ -14,16 +14,45 @@ block content
     
     if isAdmin
       a(href="/addItem" class="btn btn-success btn-sm") Add Item
+      br
+      br
+    form(class="form-inline" action="" method="post")
+      div(style="padding:5px" class="form-group")
+        label Filter By:&nbsp
+        select(name="filterBy")
+          option(value="name") name
+          option(value="author") author
+          option(value="genre") genre
+        input(type="text", name="filterTextInput")
       
-      form(action="" method="post")
-        p show hidden items?  
-          if (show)
-            input(type='checkbox', name='showHidden' checked)
-          else
-            input(type='checkbox', name='showHidden')
-        br
-        br
-        input(type='submit', value='Filter')
+      div(style="padding-left:5px" class="form-group")
+        label Sort By:&nbsp
+        //- br
+        select(name="sortBy")
+          option(value="name") name
+          option(value="isbn") isbn
+          option(value="author") author
+          option(value="genre") genre
+          if isAdmin
+            option(value="cost") cost
+          option(value="price") price
+          option(value="library") library
+          if isAdmin
+            option(value="show") show
+            option(value="numberInStock") numberInStock
+        select(name="sortType")
+          option(value="ASC") ASC
+          option(value="DESC") DESC
+      div(class="form-group")
+        if isAdmin
+          label show hidden  
+            if (show)
+              input(type='checkbox', name='showHidden' checked)
+            else
+              input(type='checkbox', name='showHidden')
+            
+      &nbsp&nbsp
+      input(type='submit', class="btn btn-primary" value='Apply')
       
     table(class="table table-striped table-hover")
       tr
