--- a/views/index.jade
+++ b/views/index.jade
@@ -8,73 +8,39 @@ block content
         
         p(style="color: red") #{error}
         if displayName
-          p Hello, #{displayName}
+          h3 Hello, #{displayName}
           a(href="/logout") Logout
         else 
-          p Hello, Guest
+          h3 Hello, Guest
           //- a(onclick="lock.show(); return false;" id="login") Login
-          
+      hr 
+      br 
+      br 
+      br 
+      br
+      br 
       if (success)
         p(style="color: green")=success
-        
-      h5 Recently Added
-      div.carousel
-        div 1
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        div 2
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        div 3
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        div 4
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        div 5
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        div 6
-          img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
       
-      hr
-      br
-      h5 Popular This Week
-        div.carousel
-          div 1
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 2
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 3
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 4
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 5
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 6
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        
-      hr
-      br
-      h5 History     
-        div.carousel
-          div 1
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 2
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 3
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 4
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 5
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-          div 6
-            img(src="http://www.onguardapparel.com/images/products/thumb/HiddenTailor.9074B.jpg" height="100" width="100")
-        
-        
-      br
+      h2 This Week's Featured Items:
+      div(class="well carousel")
+        each item in items
+          div(class="showDetails" id="#{item.id}")
+            img(src="#{item.image}" id="#{item.id}" width="300px" height="450px")
+            p #{item.name}
       br
       script. 
         $(document).ready( function () {
           $(".carousel").slick({
             infinite: true,
-            slidesToShow: 4,
+            slidesToShow: 3,
             dots: true,
             slidesToScroll: 3
           });
+          
+          $(".showDetails").click(function (e) {
+            console.log("showing details for: " + e.target.id);
+            window.document.location = "item/"+e.target.id;          
+          });
+          
         });
