users cannot add an item that is out of stock to the cart | adding to cart decreases numberInStock, removing from cart increase numberInStock

--- a/views/cart.jade
+++ b/views/cart.jade
@@ -95,7 +95,7 @@ block content
             name: 'BookFront',
             description: 'Thank you for supporting your local bookstore',
             amount: amount,
-            billingAddress: true
+            billingAddress: false
         });
         
         // Open Checkout when the link is clicked
